--- a/src/web/wynn/item/simulation/index.html
+++ b/src/web/wynn/item/simulation/index.html
@@ -19,8 +19,9 @@
     <script src="../../../js_global/analytics.js"></script>
     <script src="../../../js_global/item_rendering.js"></script>
     <script src="../../../js_global/item_rerolling.js" defer></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
-    data-overlays="bottom" crossorigin="anonymous"></script>
+    <!-- Temporarily disabled Google Ads -->
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
+    data-overlays="bottom" crossorigin="anonymous"></script> -->
     <script src="../../../js_global/config.js"></script>
     <script src="../../../js_global/layout.js"></script>
 </head>
