--- a/src/web/wynn/online/index.html
+++ b/src/web/wynn/online/index.html
@@ -18,8 +18,9 @@
     <script type="text/javascript" src="../../js_global/sidebar.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D8GME84PS"></script>
     <script src="../../js_global/analytics.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
-    data-overlays="bottom" crossorigin="anonymous"></script>
+    <!-- Temporarily disabled Google Ads -->
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6817592042954484"
+    data-overlays="bottom" crossorigin="anonymous"></script> -->
     <script src="../../js_global/config.js"></script>
     <script src="../../js_global/layout.js"></script>
 </head>
