--- a/src/web/index.html
+++ b/src/web/index.html
@@ -178,7 +178,7 @@
 
 
                 <div class="feature">
-                    <button class="toggle-button" onclick="toggleSection('aboutProjectSection', this)">🚀 About This Project</button>
+                    <button class="toggle-button" onclick="toggleSection('aboutProjectSection', this)">About This Project</button>
                     <div id="aboutProjectSection" style="display: none;">
                         <div class="project-content">
                             <div class="project-item">
