--- a/src/web/wynn/item/mythic/index.html
+++ b/src/web/wynn/item/mythic/index.html
@@ -58,6 +58,19 @@
             <p>Information Maintained by Marketplace Community</p>
             <p>If your item is weighted higher than any of the current #1 mythic, contact us to get it evaluated.</p>
         </div>
+
+        <div class="application-portal">
+            <div class="portal-content">
+                <h3 class="portal-title">Join the Nori Team</h3>
+                <p class="portal-description">
+                    Applications are now open! We're looking for dedicated players to contribute to Item Scales (weight), Builds, and Recipes, etc.
+                </p>
+                <a href="https://forms.gle/ALqc5G22n2AsChTf6" target="_blank" class="portal-button">
+                    <span class="button-icon">📝</span>
+                    Apply Now
+                </a>
+            </div>
+        </div>
     </div>
     <footer>
         <p>&copy; 2024 RawFish. Powered by Nori-Web.</p>
