--- a/src/web/wynn/recipe/index.html
+++ b/src/web/wynn/recipe/index.html
@@ -68,6 +68,19 @@
             </form>
             <div id="recipe-results" class="results-container"></div>
         </div>
+
+        <div class="application-portal">
+            <div class="portal-content">
+                <h3 class="portal-title">Join the Nori Team</h3>
+                <p class="portal-description">
+                    Applications are now open! We're looking for dedicated players to contribute to Item Scales (weight), Builds, and Recipes, etc.
+                </p>
+                <a href="https://forms.gle/ALqc5G22n2AsChTf6" target="_blank" class="portal-button">
+                    <span class="button-icon">📝</span>
+                    Apply Now
+                </a>
+            </div>
+        </div>
     </div>
 
     <footer>
