--- a/src/web/index.html
+++ b/src/web/index.html
@@ -52,8 +52,8 @@
             <!-- About Nori Developer -->
             <div class="about-nori-section">
                 <div class="about-nori-content">
-                    <h2>About Nori Developer</h2>
-                    <p>I enjoy turning ideas into something tangible. Some work out, some don't, but I believe that even the wild ones deserve a shot to show what they can become.</p>
+                    <h2>About The Developer</h2>
+                    <p id="nori-quote">I enjoy turning ideas into something tangible. Some work out, some don't, but I believe that even the wild ones deserve a shot to show what they can become.</p>
                     <h3>Contact & Social</h3>
                     <div class="contact-links">
                         <a href="https://github.com/RawFish69" target="_blank" class="contact-link">🐙 GitHub</a>
@@ -61,7 +61,6 @@
                         <a href="https://discord.gg/eDssA6Jbwd" target="_blank" class="contact-link">💬 Discord</a>
                         <a href="https://nori.fish/license" target="_blank" class="contact-link">📄 License</a>
                     </div>
-                    <p><strong>Discord nametag:</strong> rawfish69</p>
                 </div>
             </div>
 
@@ -83,7 +82,9 @@
                             <p>Non research/work related projects.</p>
                             
                             <ul class="project-list">
-                                <li><strong>Autonomous Racing Drone</strong> - Autonomous racing drone (WIP) <span class="tech-tags">Firmware Dev, ROS2, Simulation,Prototyping</span></li>
+                                <li><strong>UAV Controller</strong> - Control system for autonomous and manual quadcopter flight with custom protocol support and simulation <span class="tech-tags">C++, Python, Controls, ROS2</span> <a href="https://github.com/RawFish69/UAV-Controller" target="_blank" class="project-link">Github Repo</a></li>
+                                <li><strong>RotorBench Web App</strong> Web-based tool for building drones with 3D rendering and performance metrics (WIP)<span class="tech-tags">React, Node.js, FastAPI, UX/UI Design</span></li>
+                                <li><strong>Autonomous Racing Drone</strong> - RL Autonomous racing drone (WIP) <span class="tech-tags">Firmware Dev, ROS2, Simulation, Learning based control</span></li>
                                 <li><strong>Manual Racing FPV Drone</strong> - FPV drone with custom hardware<span class="tech-tags">CAD, Betaflight</span></li>
                                 <li><strong>Long Range FPV Drone</strong> - Extended range drones with custom hardware<span class="tech-tags">CAD, Firmware Dev</span></li>
                                 <li><strong>Nano FPV Drone</strong> - micro/nano FPV drone with custom hardware<span class="tech-tags">CAD, Betaflight</span></li>
